--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "initdb.js"
+    "initdb.ts"
   ],
   "exclude": ["node_modules"]
 }
